# BakmachineHS

./: .gitignore  README.md  SimpleComp.cabal  input  out.byte
compiler/: AsmParser.hs  AsmParser.hs~  AsmTypes.hs  GenByte.hs  Main.hs  Main.hs~
interpret/: Main.hs  Main.hs~  Types.hs
src/: Types.hs  Types.hs~
