name: SimpleComp
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: compiler and virtual machine for a simple language
description:  
data-dir: ""
 
executable SimpleComp
    build-depends: base, parsec, binary, bytestring, containers 
    main-is: Main.hs
    buildable: True
    other-modules: AsmTypes, GenByte, AsmParser
    default-language: Haskell2010
    hs-source-dirs: compiler

executable Interpret
    default-language: Haskell2010
    build-depends: base, parsec, binary, bytestring, containers
    main-is: Main.hs
    buildable: True
    other-modules: Types
    hs-source-dirs: interpret

